fix alignment to the right

--- a/MMM-WunderGround-PWS-Observations.css
+++ b/MMM-WunderGround-PWS-Observations.css
@@ -35,6 +35,7 @@
 }
 
 .MMM-WunderGround-PWS-Observations .tableheader {
+  width: 150px;
   font-size: 75%;
   text-align: center;
 } 
@@ -45,10 +46,18 @@
  } 
 
 .MMM-WunderGround-PWS-Observations .pop {
-  line-height: 27px;
-   text-align: right;
   font-size: 75%;
+  
+  
+  
 } 
+.MMM-WunderGround-PWS-Observations .popr {
+  text-align: right;
+  font-size: 75%;
+  padding-left: 10px;
+  
+} 
+
 .MMM-WunderGround-PWS-Observations .mm {
   font-size: 75%;
 } 
@@ -66,8 +75,12 @@
 }
 
 .MMM-WunderGround-PWS-Observations .large1 {
+  line-height: .8cm !important;
+  width: 150px;
   float: right;
-  font-size: 200%;
-  color: #FF4C4C;
 }
 
+.MMM-WunderGround-PWS-Observations .region.middle.center {
+	width: 150px;
+	float: right;
+}
